EAMxx: add computed tendency check to a couple of tests

--- a/components/eamxx/tests/coupled/dynamics_physics/homme_shoc_cld_spa_p3_rrtmgp_128levels/input.yaml
+++ b/components/eamxx/tests/coupled/dynamics_physics/homme_shoc_cld_spa_p3_rrtmgp_128levels/input.yaml
@@ -20,6 +20,7 @@ initial_conditions:
 atmosphere_processes:
   atm_procs_list: (homme,physics)
   schedule_type: Sequential
+  compute_tendencies: [T_mid, qv]
   homme:
     Moisture: moist
   physics:
