--- a/components/eamxx/tests/coupled/dynamics_physics/homme_shoc_cld_spa_p3_rrtmgp_128levels/homme_shoc_cld_spa_p3_rrtmgp_128levels_output.yaml
+++ b/components/eamxx/tests/coupled/dynamics_physics/homme_shoc_cld_spa_p3_rrtmgp_128levels/homme_shoc_cld_spa_p3_rrtmgp_128levels_output.yaml
@@ -2,7 +2,6 @@
 ---
 Casename: homme_shoc_cld_spa_p3_rrtmgp_128levels_output
 Averaging Type: Instant
-Max Snapshots Per File: 1
 Fields:
   Physics GLL:
     Field Names:
@@ -65,9 +64,11 @@ Fields:
       - rad_heating_pdel
       - sfc_flux_lw_dn
       - sfc_flux_sw_net
+      - EAMxx_T_mid_tend
+      - EAMxx_qv_tend
  
 output_control:
-  Frequency: ${NUM_STEPS}
+  Frequency: 1
   frequency_units: nsteps
   Timestamp in Filename: false
   MPI Ranks in Filename: true
