--- a/components/eamxx/tests/uncoupled/p3/input.yaml
+++ b/components/eamxx/tests/uncoupled/p3/input.yaml
@@ -12,6 +12,7 @@ Time Stepping:
 atmosphere_processes:
   atm_procs_list: (p3)
   p3:
+    compute_tendencies: [T_mid,qc]
     do_prescribed_ccn: false
 
 grids_manager:
