--- a/components/eamxx/docker/Dockerfile
+++ b/components/eamxx/docker/Dockerfile
@@ -21,3 +21,6 @@ RUN echo "deb [signed-by=/usr/share/keyrings/cloud.google.gpg] https://packages.
 
 RUN apt-get update && apt-get install -y google-cloud-sdk
 RUN gcloud config set project vcm-ml
+
+ENV OMPI_ALLOW_RUN_AS_ROOT=1
+ENV OMPI_ALLOW_RUN_AS_ROOT_CONFIRM=1
