--- a/components/eamxx/tests/uncoupled/cld_fraction/input.yaml
+++ b/components/eamxx/tests/uncoupled/cld_fraction/input.yaml
@@ -11,6 +11,9 @@ Time Stepping:
 
 atmosphere_processes:
   atm_procs_list: (CldFraction)
+  CldFraction:
+    ice_cloud_threshold: 1e-12
+    ice_cloud_for_output_threshold: 1e-5
 
 grids_manager:
   Type: Mesh Free
