--- a/components/eamxx/tests/coupled/dynamics_physics/homme_shoc_cld_spa_p3_rrtmgp_128levels/homme_shoc_cld_spa_p3_rrtmgp_128levels_output.yaml
+++ b/components/eamxx/tests/coupled/dynamics_physics/homme_shoc_cld_spa_p3_rrtmgp_128levels/homme_shoc_cld_spa_p3_rrtmgp_128levels_output.yaml
@@ -7,7 +7,6 @@ Fields:
   Physics GLL:
     Field Names:
       # HOMME
-      - horiz_winds
       - ps
       - pseudo_density
       - omega
@@ -16,7 +15,6 @@ Fields:
       # SHOC
       - cldfrac_liq
       - eddy_diff_mom
-      - horiz_winds
       - sgs_buoy_flux
       - tke
       - inv_qc_relvar
@@ -47,6 +45,8 @@ Fields:
       - micro_vap_liq_exchange
       - precip_ice_surf_mass
       - precip_liq_surf_mass
+      # SHOC + HOMME
+      - horiz_winds
       # SHOC + P3
       - qc
       - qv
