Add li_mesh module
Add li_mesh module that is called during init to make all mesh
parameters public. This is copied from mpas-ocean, with modifications
appropriate for MALI.

--- a/components/mpas-albany-landice/src/shared/Makefile
+++ b/components/mpas-albany-landice/src/shared/Makefile
@@ -3,6 +3,7 @@
 
 OBJS =  mpas_li_constants.o \
         mpas_li_mask.o \
+        mpas_li_mesh.o \
         mpas_li_setup.o
 
 all: $(OBJS)
@@ -13,6 +14,7 @@ mpas_li_setup.o:
 
 mpas_li_mask.o: mpas_li_setup.o
 
+mpas_li_mesh.o:
 
 
 clean:
