Update shared Makefile to include li_config

--- a/components/mpas-albany-landice/src/shared/Makefile
+++ b/components/mpas-albany-landice/src/shared/Makefile
@@ -4,6 +4,7 @@
 OBJS =  mpas_li_constants.o \
         mpas_li_mask.o \
         mpas_li_mesh.o \
+        mpas_li_config.o \
         mpas_li_setup.o
 
 all: $(OBJS)
@@ -16,6 +17,7 @@ mpas_li_mask.o: mpas_li_setup.o
 
 mpas_li_mesh.o:
 
+mpas_li_config.o:
 
 clean:
 	$(RM) *.o *.mod *.f90
