change all cld_frac_for_output to cld_frac_for_analysis

--- a/components/eamxx/data/scream_default_output.yaml
+++ b/components/eamxx/data/scream_default_output.yaml
@@ -23,8 +23,8 @@ Fields:
       - tke
       - pbl_height
       # CLD
-      - cldfrac_ice_for_output
-      - cldfrac_tot_for_output
+      - cldfrac_ice_for_analysis
+      - cldfrac_tot_for_analysis
       # P3
       - bm
       - nc
