Revert "Switch to C++17 from C++14(!)"
This reverts commit 5bf2fe9bb1dd122fa5aa8ebd7c61f93e8efcfcaf.

--- a/components/eamxx/CMakeLists.txt
+++ b/components/eamxx/CMakeLists.txt
@@ -51,7 +51,12 @@ endif()
 # to be on. For now, simply ensure Kokkos Serial is enabled
 option (Kokkos_ENABLE_SERIAL "" ON)
 
-set(CMAKE_CXX_STANDARD 17)
+# MAM support requires C++17 -- hopefully SCREAM itself will get there soon
+if (SCREAM_ENABLE_MAM)
+  set(CMAKE_CXX_STANDARD 17)
+else()
+  set(CMAKE_CXX_STANDARD 14)
+endif()
 
 if (NOT SCREAM_CIME_BUILD)
   project(SCREAM CXX C Fortran)
