--- a/components/eamxx/tests/uncoupled/ml_nudge/CMakeLists.txt
+++ b/components/eamxx/tests/uncoupled/ml_nudge/CMakeLists.txt
@@ -1,6 +1,16 @@
 include(ScreamUtils)
+
+if(${CMAKE_VERSION} VERSION_GREATER_EQUAL "3.11.0")
+message(STATUS "Downloading Pybind11")
+include(FetchContent)
+
+FetchContent_Declare(pybind11 GIT_REPOSITORY https://github.com/pybind/pybind11.git GIT_TAG v2.10.4)
+FetchContent_MakeAvailable(pybind11)
+else()
+message(FATAL_ERROR "pybind11 is missing. Use CMake >= 3.11 or download it")
+endif()
+
 set(PYBIND11_PYTHON_VERSION 3.9 CACHE STRING "")
-add_subdirectory(pybind11)
 
 find_package(Python REQUIRED COMPONENTS Interpreter Development)
 
@@ -9,6 +19,7 @@ CreateUnitTest(ml_nudge_standalone "ml_nudge_standalone.cpp" "${NEED_LIBS}" LABE
 
 target_compile_definitions(ml_nudge_standalone PRIVATE -DCUSTOM_SYS_PATH="${CMAKE_CURRENT_SOURCE_DIR}")
 target_include_directories(ml_nudge_standalone SYSTEM PRIVATE ${PYTHON_INCLUDE_DIRS})
+message(STATUS "Python include dirs: ${PYTHON_INCLUDE_DIRS}")
 
 # Set AD configurable options
 set(NUM_STEPS 1)
