ml nudge test runs on quartz

--- a/components/eamxx/tests/uncoupled/CMakeLists.txt
+++ b/components/eamxx/tests/uncoupled/CMakeLists.txt
@@ -9,7 +9,7 @@ if (NOT SCREAM_BASELINES_ONLY)
   add_subdirectory(cld_fraction)
   add_subdirectory(spa)
   add_subdirectory(surface_coupling)
-  if (IS_DOCKER)
+  if (RUN_ML_NUDGE_TEST)
     add_subdirectory(ml_nudge)
   endif()
   if (SCREAM_DOUBLE_PRECISION)
