--- a/components/eamxx/tests/coupled/dynamics_physics/model_restart/input_baseline.yaml
+++ b/components/eamxx/tests/coupled/dynamics_physics/model_restart/input_baseline.yaml
@@ -3,13 +3,11 @@
 driver_options:
   atmosphere_dag_verbosity_level: 5
 
-Time Stepping:
-  Time Step: 300
-  Number of Steps: 2
-  Run Start Time: [12, 00, 00]      # Hours, Minutes, Seconds
-  Run Start Date: [2021, 10, 12]    # Year, Month, Day
-  Case Start Time: [12, 00, 00]      # Hours, Minutes, Seconds
-  Case Start Date: [2021, 10, 12]    # Year, Month, Day
+time_stepping:
+  time_step: 300
+  number_of_steps: 2
+  run_t0: ${RUN_T0}  # YYYY-MM-DD-XXXXX
+  case_t0: ${CASE_T0}  # YYYY-MM-DD-XXXXX
 
 initial_conditions:
   Filename: ${SCREAM_DATA_DIR}/init/${EAMxx_tests_IC_FILE_72lev}
