--- a/components/eamxx/tests/uncoupled/spa/CMakeLists.txt
+++ b/components/eamxx/tests/uncoupled/spa/CMakeLists.txt
@@ -13,6 +13,7 @@ CreateUnitTest(spa_stand_alone "spa_stand_alone.cpp" "${NEED_LIBS}" LABELS ${TES
 # Set AD configurable options
 SetVarDependingOnTestSize(NUM_STEPS 2 4 48)
 set (ATM_TIME_STEP 864000)
+set (RUN_T0 2021-10-12-45000)
 
 ## Copy (and configure) yaml files needed by tests
 CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/input.yaml
@@ -40,8 +41,8 @@ if (TEST_RANK_END GREATER TEST_RANK_START)
   math (EXPR CMP_RANK_START ${TEST_RANK_START}+1)
   foreach (MPI_RANKS RANGE ${CMP_RANK_START} ${TEST_RANK_END})
 
-    set (SRC_FILE "${BASE_TEST_NAME}_standalone_output.INSTANT.nsteps_x1.np${MPI_RANKS}.nc")
-    set (TGT_FILE "${BASE_TEST_NAME}_standalone_output.INSTANT.nsteps_x1.np${TEST_RANK_START}.nc")
+    set (SRC_FILE "${BASE_TEST_NAME}_standalone_output.INSTANT.nsteps_x1.np${MPI_RANKS}.${RUN_T0}.nc")
+    set (TGT_FILE "${BASE_TEST_NAME}_standalone_output.INSTANT.nsteps_x1.np${TEST_RANK_START}.${RUN_T0}.nc")
     set (TEST_NAME "${BASE_TEST_NAME}_np${TEST_RANK_START}_vs_np${MPI_RANKS}_bfb")
     add_test (NAME ${TEST_NAME}
               COMMAND cmake -P ${CMAKE_BINARY_DIR}/bin/CprncTest.cmake ${SRC_FILE} ${TGT_FILE}
