--- a/components/eamxx/tests/uncoupled/ml_nudge/CMakeLists.txt
+++ b/components/eamxx/tests/uncoupled/ml_nudge/CMakeLists.txt
@@ -21,6 +21,7 @@ message(STATUS "Python include dirs: ${PYTHON_INCLUDE_DIRS}")
 # Set AD configurable options
 set(NUM_STEPS 1)
 set(ATM_TIME_STEP 1800)
+set (RUN_T0 2021-10-12-45000)
 
 # Configure yaml input file to run directory
 configure_file(${CMAKE_CURRENT_SOURCE_DIR}/input.yaml
