--- a/components/eamxx/tests/uncoupled/surface_coupling/input.yaml
+++ b/components/eamxx/tests/uncoupled/surface_coupling/input.yaml
@@ -3,9 +3,8 @@
 driver_options:
   atmosphere_dag_verbosity_level: 5
 
-Time Stepping:
-  Start Time: [12, 30, 00]      # Hours, Minutes, Seconds
-  Start Date: [2021, 10, 12]    # Year, Month, Day
+time_stepping:
+  run_t0: ${RUN_T0}  # YYYY-MM-DD-XXXXX
 
 atmosphere_processes:
   atm_procs_list: (SurfaceCouplingImporter,SurfaceCouplingExporter)
