--- a/components/eamxx/tests/uncoupled/ml_correction/input.yaml
+++ b/components/eamxx/tests/uncoupled/ml_correction/input.yaml
@@ -10,7 +10,7 @@ Time Stepping:
   Number of Steps: ${NUM_STEPS}
 
 atmosphere_processes:
-  atm_procs_list: (MLNudging)
+  atm_procs_list: (MLCorrection)
 
 grids_manager:
   Type: Mesh Free
